<!--
  ~ Copyright 2020 Thibault Seisel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="dev_activity_spotify_debug">Spotify Debugger</string>
    <string name="dev_category_title_tone">Tone</string>
    <string name="dev_category_title_feature">Audio features</string>
    <string name="dev_label_tone">Tone</string>
    <string name="dev_label_tempo">Tempo</string>
    <string name="dev_label_loudness">Loudness</string>
    <string name="dev_acousticness">Acousticness</string>
    <string name="dev_label_danceability">Danceability</string>
    <string name="dev_label_energy">Energy</string>
    <string name="dev_label_instrumentalness">Instrumentalness</string>
    <string name="dev_label_valence">Valence</string>
    <string name="dev_label_liveness">Liveness</string>
    <string name="hint_minimum">Min</string>
    <string name="hint_maximum">Max</string>
    <string name="dev_title_new_filter">New filter</string>
    <string name="dev_label_signature">Time signature</string>
    <string name="dev_label_acousticness">Acousticness</string>
    <string name="dev_label_speechiness">Speechiness</string>
    <string name="dev_descr_album_art">Album artwork</string>
    <string name="dev_format_decibels">%1$+.2f dB</string>
    <string name="dev_action_show_results">Show</string>
    <string name="dev_matching_tracks_count">%1$d tracks matched</string>
    <string name="dev_format_tempo">%1$.0f BPM</string>
    <string name="dev_format_signature">%d beats</string>
    <string name="dev_label_pitch_key">Pitch key</string>
    <string name="dev_mode_minor">Minor</string>
    <string name="dev_mode_major">Major</string>
    <string name="dev_key_c">C</string>
    <string name="dev_key_cs">C#</string>
    <string name="dev_key_d">D</string>
    <string name="dev_key_ds">D#</string>
    <string name="dev_key_e">E</string>
    <string name="dev_key_f">F</string>
    <string name="dev_key_fs">F#</string>
    <string name="dev_key_g">G</string>
    <string name="dev_key_gs">G#</string>
    <string name="dev_key_a">A</string>
    <string name="dev_key_as">A#</string>
    <string name="dev_key_b">B</string>
    <string name="dev_action_save_as_playlist">Save as playlist</string>
    <string name="dev_title_playlist_from_selection">New playlist from selection</string>
    <string name="dev_hint_playlist_title">Playlist title</string>
    <string name="dev_filter_by_features">Filter by Audio Features</string>
    <string name="dev_feature_search_results">Search results</string>
    <string name="dev_empty_unlinked_tracks">All tracks are in sync</string>
    <string name="dev_unlinked_tracks">Unlinked tracks</string>
    <string name="dev_show_stats">Show stats</string>
</resources>
