<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Thibault Seisel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dev_graph"
    app:startDestination="@id/fragment_debug_menu">

    <fragment
        android:id="@+id/fragment_debug_menu"
        android:name="fr.nihilus.music.devmenu.DebugMenuFragment"
        android:label="@string/dev_activity_spotify_debug"
        tools:layout="@layout/dev_fragment_menu">
        <action
            android:id="@+id/show_mix_composer"
            app:destination="@id/fragment_mix_composer"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragment_mix_composer"
        android:name="fr.nihilus.music.devmenu.features.MixComposerFragment"
        android:label="@string/dev_filter_by_features"
        tools:layout="@layout/fragment_mix_composer">
        <action
            android:id="@+id/show_matching_tracks"
            app:destination="@id/fragment_featured_tracks"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/add_new_filter"
            app:destination="@id/dialog_add_filter" />
    </fragment>
    <fragment
        android:id="@+id/fragment_featured_tracks"
        android:name="fr.nihilus.music.devmenu.features.FeaturedTracksFragment"
        android:label="@string/dev_feature_search_results"
        tools:layout="@layout/fragment_featured_tracks" >
        <action
            android:id="@+id/create_playlist_from_selection"
            app:destination="@id/dialog_new_playlist_from_selection" />
    </fragment>
    <dialog
        android:id="@+id/dialog_add_filter"
        android:name="fr.nihilus.music.devmenu.features.AddFilterDialog"
        android:label="@string/dev_title_new_filter" />
    <dialog
        android:id="@+id/dialog_new_playlist_from_selection"
        android:name="fr.nihilus.music.devmenu.features.NewPlaylistFromSelectionDialog"
        android:label="@string/dev_title_playlist_from_selection" />
</navigation>