<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Thibault Seisel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/grid_2">

        <TextView
            android:id="@+id/label_tempo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dev_label_tempo"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_energy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dev_label_energy"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_tempo" />

        <TextView
            android:id="@+id/label_danceability"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dev_label_danceability"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_energy" />

        <TextView
            android:id="@+id/label_valence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dev_label_valence"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_danceability" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="label_tempo,label_energy,label_danceability,label_valence" />

        <TextView
            android:id="@+id/min_tempo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_tempo"
            app:layout_constraintStart_toEndOf="@id/barrier_labels"
            tools:text="62.11" />

        <TextView
            android:id="@+id/min_energy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_energy"
            app:layout_constraintStart_toEndOf="@id/barrier_labels"
            tools:text="45.89%" />

        <TextView
            android:id="@+id/min_danceability"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_danceability"
            app:layout_constraintStart_toEndOf="@id/barrier_labels"
            tools:text="11.47%" />

        <TextView
            android:id="@+id/min_valence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_valence"
            app:layout_constraintStart_toEndOf="@id/barrier_labels"
            tools:text="12.6%" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="min_tempo,min_energy,min_danceability,min_valence" />

        <TextView
            android:id="@+id/med_tempo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_tempo"
            app:layout_constraintStart_toEndOf="@id/barrier_min"
            tools:text="120.00" />

        <TextView
            android:id="@+id/med_energy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_energy"
            app:layout_constraintStart_toEndOf="@id/barrier_min"
            tools:text="90.6%" />

        <TextView
            android:id="@+id/med_danceability"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_danceability"
            app:layout_constraintStart_toEndOf="@id/barrier_min"
            tools:text="52.13%" />

        <TextView
            android:id="@+id/med_valence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_valence"
            app:layout_constraintStart_toEndOf="@id/barrier_min"
            tools:text="42.90%" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="med_tempo,med_energy,med_danceability,med_valence" />

        <TextView
            android:id="@+id/max_tempo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_tempo"
            app:layout_constraintStart_toEndOf="@id/barrier_med"
            tools:text="210" />

        <TextView
            android:id="@+id/max_energy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_energy"
            app:layout_constraintStart_toEndOf="@id/barrier_med"
            tools:text="99.85%" />

        <TextView
            android:id="@+id/max_danceability"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_danceability"
            app:layout_constraintStart_toEndOf="@id/barrier_med"
            tools:text="82.79%" />

        <TextView
            android:id="@+id/max_valence"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/grid_2"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBaseline_toBaselineOf="@id/label_valence"
            app:layout_constraintStart_toEndOf="@id/barrier_med"
            tools:text="95.1%" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>